--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,31 @@ html {
   box-sizing: inherit;
 }
 
+.container {
+  max-width: 1100px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.hidden {
+  display: none;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.cart-content {
+  position: relative;
+}
+
+.cart-content:hover .content {
+  display: block;
+  position: absolute;
+  right: 0;
+  padding: 1rem;
+  width: 400px;
+  background-color: #ffffff;
 }
