--- a/css/app.css
+++ b/css/app.css
@@ -24,7 +24,11 @@ html {
 }
 
 .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 1rem 0;
 }
@@ -40,4 +44,13 @@ html {
   padding: 1rem;
   width: 400px;
   background-color: #ffffff;
+}
+
+.cart-content:hover .content .button {
+  background-color: #741d51;
+  padding: .5rem 1rem;
+  display: block;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
 }
