--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,3 +1,12 @@
 @mixin box-sizing {
     box-sizing: border-box;
 }
+
+@mixin button($background-color) {
+    background-color: $background-color;
+    padding: .5rem 1rem;
+    display: block;
+    text-align: center;
+    color: $white;
+    text-decoration: none;
+}
