--- a/scss/app.scss
+++ b/scss/app.scss
@@ -41,5 +41,9 @@ body {
         right: 0;
         padding: 1rem;
         max-width: 400px;
+
+        .button {
+            @include button($secondary)
+        }
     }
 }
