Building Mixins for Media Queries

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,12 @@
+// fonts
 $mainFont : 'Raleway', sans-serif;
 
+// breakpoints
+$phone : 480px;
+$tablet : 768px;
+$desktop : 1000px;
+
+// colors
 $primary : #33C3F0;
 $secondary : #741d51;
 $alternative : #e44e52;
