--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,3 +10,22 @@
     color: $white;
     text-decoration: none;
 }
+
+// Media queries
+@mixin phone {
+    @media (min-width: #{$phone}) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (min-width: #{$tablet}) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (min-width: #{$desktop}) {
+        @content;
+    }
+}
