--- a/scss/app.scss
+++ b/scss/app.scss
@@ -184,3 +184,40 @@ img {
         }
     }
 }
+
+.footer {
+    border-top: 1px solid darken($gray, 5%);
+    margin-top: 1rem;
+    padding-top: 2rem;
+
+    .container-footer {
+        display: flex;
+        flex-direction: column;
+
+        @include tablet {
+            flex-direction: row;
+        }
+    }
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+    flex: 1;
+
+    @include desktop {
+        flex: 0 0 calc(30% - 1rem);
+    }
+
+    a {
+        color: $black;
+        text-decoration: none;
+        margin-bottom: .4rem;
+        text-align: center;
+
+        @include desktop {
+            text-align: left;
+        }
+    }
+}
